# ArkOS-Dev-Tools

./: .gitignore  CMakeLists.txt  Makefile  arkcreate-pkg  arkdep  arkgen-component  arkgen-message
.github/workflows/: main.yml
arkos-templates/: CMakeLists.txt  KWStyle.xml  Makefile  arkospkg.xml
arkos-templates/cmake/: component.cmake  message.cmake  tail.cmake
arkos-templates/include/: ArkMsgpkgrootname.hpp
arkos-templates/src/: pkgname-component.cpp  pkgname-component.hpp
cmake/: ArkOS-core-config.cmake.in  GitVersionGenerator.cmake  GitVersionGenerator.cmake.in  UseArkOS.cmake  cpack_options.cmake.in  pkgs-cpack.cmake
